--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,8 +8,8 @@ body {
   justify-content: center;
 
   form {
-    background-color: #102b96;
-    color: #fff;
+    background-color: #fff;// #102b96
+    color: #000;
     width: 500px;
     padding: 20px;
 
@@ -21,6 +21,24 @@ body {
           font-size: 28px;
         }
       }
+    }
+
+    input{
+      border: 1px solid #E5E5E5;
+      border-radius: 2px;
+      outline: none;
+      padding: 1px;
+
+      &:hover{
+        background-color: #F4F4F5;
+      }
+    /*   &:focus{
+        border-color: aqua;
+      } */
+    }
+
+    input[type="email"]{
+
     }
 
     input[type="submit"]{
