--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,9 +6,10 @@
 body {
   display: flex;
   justify-content: center;
+  background-color: #102b96;
 
   form {
-    background-color: #fff;// #102b96
+    background-color: #fff; // #102b96
     color: #000;
     width: 500px;
     padding: 20px;
@@ -23,25 +24,26 @@ body {
       }
     }
 
-    input{
-      border: 1px solid #E5E5E5;
+    input {
+      border: 1px solid #e5e5e5;
       border-radius: 2px;
       outline: none;
       padding: 1px;
 
-      &:hover{
-        background-color: #F4F4F5;
+      &:hover {
+        background-color: #f4f4f5;
       }
-    /*   &:focus{
-        border-color: aqua;
-      } */
     }
 
-    input[type="email"]{
-
+    .loginError,
+    .emailError,
+    .passwordError{
+      color: red;
+      font-size: 12px;
     }
 
-    input[type="submit"]{
+
+    button {
       padding: 2px 15px;
     }
   }
