add validation login, mail, password

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -35,9 +35,9 @@ body {
       }
     }
 
-    .loginError,
-    .emailError,
-    .passwordError{
+    .login-error,
+    .email-error,
+    .password-error{
       color: red;
       font-size: 12px;
     }
