complete of task form

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,7 +9,7 @@ body {
   background-color: #102b96;
 
   form {
-    background-color: #fff; // #102b96
+    background-color: #fff;
     color: #000;
     width: 500px;
     padding: 20px;
@@ -41,7 +41,6 @@ body {
       color: red;
       font-size: 12px;
     }
-
 
     button {
       padding: 2px 15px;
