add highlight error

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,8 +8,23 @@
   --white-background: #fff;
   --form-input-hover: #f4f4f5;
   --form-input-border: #e5e5e5;
+  --form-input-border-focus: aqua;
+  --form-input-border-error: red;
   --form-title-text: #000;
   --error-message: red;
+}
+
+.input-error{
+  border: 1px solid var(--form-input-border-error);
+}
+.input-focus{
+  border: 1px solid var(--form-input-border-focus);
+}
+.input-border{
+  border: 1px solid var(--form-input-border);
+}
+.hidden{
+  display: none;
 }
 
 body {
@@ -37,7 +52,7 @@ body {
     .email,
     .password {
       display: flex;
-      border: 1px solid var(--form-input-border);
+      // border: 1px solid var(--form-input-border);
       border-radius: 2px;
       outline: none;
       padding: 0 2px;
@@ -56,7 +71,7 @@ body {
 
       .first-password,
       .second-password {
-        border: 1px solid var(--form-input-border);
+        // border: 1px solid var(--form-input-border);
         border-right: none;
         border-top-left-radius: 2px;
         border-bottom-left-radius: 2px;
@@ -71,7 +86,7 @@ body {
 
       .first-show-password-icon,
       .second-show-password-icon {
-        border: 1px solid var(--form-input-border);
+        // border: 1px solid var(--form-input-border);
         border-left: none;
         border-top-right-radius: 2px;
         border-bottom-right-radius: 2px;
